// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`datasource tests create a gauge chart 1`] = `
{
  "background": "#FFFFFF",
  "chartJsConfig": {
    "data": {
      "datasets": [
        {
          "backgroundColor": [
            "#999999",
            "#111111",
            "#dddddd",
          ],
          "data": [
            70,
            150,
            500,
          ],
          "minValue": -200,
          "value": -223.33333333333334,
        },
      ],
      "labels": [],
    },
    "options": {
      "animation": {
        "duration": 0,
      },
      "elements": {
        "line": {
          "fill": false,
        },
        "point": {
          "hitRadius": 15,
        },
      },
      "events": [],
      "hover": undefined,
      "layout": {
        "padding": {
          "bottom": 25,
          "left": 30,
          "right": 30,
          "top": 10,
        },
      },
      "legend": {
        "onClick": undefined,
      },
      "maintainAspectRatio": false,
      "needle": {
        "color": "#000000",
        "lengthPercentage": 80,
        "radiusPercentage": 2,
        "widthPercentage": 3.2,
      },
      "responsive": true,
      "responsiveAnimationDuration": 0,
      "title": {
        "display": true,
        "fontColor": "#000000",
        "fontSize": 22,
        "fontStyle": "normal",
        "text": "Title",
      },
      "tooltips": {
        "callbacks": {
          "label": [Function],
        },
      },
      "valueLabel": {
        "backgroundColor": "#000000",
        "borderRadius": 5,
        "bottomMarginPercentage": 5,
        "color": "#FFFFFF",
        "display": false,
        "fontSize": 30,
        "formatter": null,
        "padding": {
          "bottom": 5,
          "left": 5,
          "right": 5,
          "top": 5,
        },
      },
    },
    "type": "gauge",
  },
}
`;

exports[`datasource tests create empty gauge chart 1`] = `
{
  "background": "#FFFFFF",
  "chartJsConfig": {
    "data": {
      "datasets": [
        {
          "backgroundColor": [
            "#6aa84f",
            "#f1c232",
            "#cc0000",
          ],
          "data": [
            33,
            66,
            100,
          ],
          "minValue": 0,
          "value": -3.3333333333333335,
        },
      ],
      "labels": [],
    },
    "options": {
      "animation": {
        "duration": 0,
      },
      "elements": {
        "line": {
          "fill": false,
        },
        "point": {
          "hitRadius": 15,
        },
      },
      "events": [],
      "hover": undefined,
      "layout": {
        "padding": {
          "bottom": 25,
          "left": 30,
          "right": 30,
          "top": 25,
        },
      },
      "legend": {
        "onClick": undefined,
      },
      "maintainAspectRatio": false,
      "needle": {
        "color": "#000000",
        "lengthPercentage": 80,
        "radiusPercentage": 2,
        "widthPercentage": 3.2,
      },
      "responsive": true,
      "responsiveAnimationDuration": 0,
      "title": {
        "display": false,
        "fontColor": "#000000",
        "fontSize": 22,
        "fontStyle": "normal",
        "text": "",
      },
      "tooltips": {
        "callbacks": {
          "label": [Function],
        },
      },
      "valueLabel": {
        "backgroundColor": "#000000",
        "borderRadius": 5,
        "bottomMarginPercentage": 5,
        "color": "#FFFFFF",
        "display": false,
        "fontSize": 30,
        "formatter": null,
        "padding": {
          "bottom": 5,
          "left": 5,
          "right": 5,
          "top": 5,
        },
      },
    },
    "type": "gauge",
  },
}
`;
